# claude-skills

./: .gitignore  CLAUDE.md  LICENSE  README.md  install.sh
email-archive/: EmailArchive.slnx  README.md  SKILL.md  pyproject.toml  setup.sh
email-archive/email_archive/: __init__.py  attachment_extractor.py  cli.py  email_filter.py  models.py  store.py
email-archive/email_archive.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
email-archive/scripts/: init-db.sql
email-archive/src/EmailArchive/: EmailArchive.csproj  Program.cs  appsettings.json
email-archive/src/EmailArchive/Analytics/: AnalyticsModels.cs  AnalyticsRepository.cs
email-archive/src/EmailArchive/Commands/: EmbedCommand.cs  IngestCommand.cs  SearchCommand.cs  StatusCommand.cs
email-archive/src/EmailArchive/Configuration/: AppSettings.cs
email-archive/src/EmailArchive/Embedding/: OpenAIEmbeddingService.cs
email-archive/src/EmailArchive/Export/: ExportModels.cs  ExportRepository.cs  MarkdownFormatter.cs
email-archive/src/EmailArchive/Ingest/: AttachmentExtractor.cs  EmailFilter.cs  PstParser.cs
email-archive/src/EmailArchive/Models/: Attachment.cs  Email.cs  Tier.cs
email-archive/src/EmailArchive/Search/: SearchRepository.cs  SearchResult.cs
email-archive/src/EmailArchive/Storage/: AttachmentRepository.cs  (+2 more)
email-archive/tests/EmailArchive.Tests/: EmailArchive.Tests.csproj  IntegrationTests.cs  UnitTest1.cs
email-archive/tests_py/: test_attachment_extractor.py  test_email_filter.py  test_markdown_formatter.py  test_models.py  test_store.py
(+146 files in other folders)
